@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*guayadeque-9999 (20 Feb 2011)
+
+  20 Feb 2011; Justin Lecher <jlec@gentoo.org> -guayadeque-0.2.7.ebuild,
+  +guayadeque-9999.ebuild:
+  Moved to tree, latest in here
+
 *guayadeque-0.2.7 (13 Feb 2011)
 
   13 Feb 2011; Justin Lecher <jlec@gentoo.org> +guayadeque-0.2.7.ebuild,
